--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -146,5 +146,5 @@
   </script>
   <script type="module" src="{{ assetPath }}/scripts/dataModal.js"></script>
   <script src="{{ assetPath }}/scripts/ol.js"></script>
-  <script type="module" src="{{ assetPath }}/scripts/renderMapToDrawPolygon.js"></script>
+  <script type="module" src="{{ assetPath }}/scripts/location.js"></script>
 {% endblock %}
