--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -157,55 +157,168 @@
   width: 20%;
 }
 
-.ol-zoom {
-  top: calc(100% - 2.9em - 2.75em) !important;
-  left: calc(100% - 1.5em - 1.375em) !important;
-}
+.defra-map {
+  &-controls {
+    position: absolute;
+    width: 80%;
+    z-index: 1;
+    overflow: hidden;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    pointer-events: none;
+    right: 0px;
 
-.defra-exit-control {
-  @include font-style-stack(24px, 32px, 300, normal, true);
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  background-color: govuk-colour("white");
-  text-decoration: none;
-  color: govuk-colour("black");
-  padding: 15px 20px;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-}
+    &__bottom {
+      position: absolute;
+      left: 10px;
+      bottom: 10px;
+      right: 10px;
+      pointer-events: none;
+    }
 
-.defra-controls {
-  color: transparent !important;
-  background-size: cover;
-  width: 2em !important;
-  height: 2em !important;
-  border-color: transparent !important;
-  border-radius: 0px !important;
-  background-color: govuk-colour("white");
-  cursor: pointer;
-}
+    &__bottom * {
+      pointer-events: auto;
+    }
+  }
 
-.defra-zoom-in {
-  background-image: url(/assets/images/zoom-in-icon.svg);
-}
+  &__exit {
+    @include font-style-stack(24px, 32px, 300, normal, true);
+    float: left;
+    position: relative;
+    margin: 10px 0px 0px 10px;
+    border: 0;
+    padding: 10px;
+    width: 40px;
+    cursor: pointer;
+    background-color: govuk-colour("white");
+    text-decoration: none;
+    color: govuk-colour("black");
+    pointer-events: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 
-.defra-zoom-out {
-  background-image: url(/assets/images/zoom-out-icon.svg);
-}
+    svg {
+      display: inline-block;
+      margin-right: 15px;
+      vertical-align: top;
+    }
 
-.defra-refresh {
-  &-block {
-    bottom: 100px;
-    right: 13px;
+    span {
+      vertical-align: top;
+    }
+  }
+
+  &-reset {
+    float: right;
+    position: relative;
+    border: 0;
+    height: 50px;
+    width: 50px;
+    padding: 0;
+    cursor: pointer;
+    background-color: govuk-colour("white");
+    color: govuk-colour("black");
     display: none;
+
+    &:hover {
+      background-color: govuk-colour("light-grey");
+    }
   }
 
-  &-control {
-    background-image: url(/assets/images/refresh-icon.svg);
+  &-zoom {
+    display: none;
+
+    &-in,
+    &-out {
+      display: flex;
+      align-items: center;
+      position: relative;
+      border: 0;
+      height: 50px;
+      width: 50px;
+      padding: 0;
+      cursor: pointer;
+      background-color: govuk-colour("white");
+      color: govuk-colour("black");
+
+      &:hover {
+        background-color: govuk-colour("light-grey");
+      }
+    }
   }
 }
+
+@media (min-width: 40.0625em) {
+  .defra-map-zoom {
+    display: block;
+    float: right;
+    clear: right;
+    width: 50px;
+    height: auto;
+    margin-top: 15px;
+  }
+}
+
+@media (min-width: 52.1875em) {
+  .defra-map {
+    &__exit {
+      width: auto;
+      padding-right: 11px;
+    }
+  }
+}
+
+// .ol-zoom {
+//   top: calc(100% - 2.9em - 2.75em) !important;
+//   left: calc(100% - 1.5em - 1.375em) !important;
+// }
+
+// .defra-exit-control {
+//   @include font-style-stack(24px, 32px, 300, normal, true);
+//   position: absolute;
+//   top: 15px;
+//   left: 15px;
+//   background-color: govuk-colour("white");
+//   text-decoration: none;
+//   color: govuk-colour("black");
+//   padding: 15px 20px;
+//   z-index: 1;
+//   display: flex;
+//   align-items: center;
+// }
+
+// .defra-controls {
+//   color: transparent !important;
+//   background-size: cover;
+//   width: 2em !important;
+//   height: 2em !important;
+//   border-color: transparent !important;
+//   border-radius: 0px !important;
+//   background-color: govuk-colour("white");
+//   cursor: pointer;
+// }
+
+// .defra-zoom-in {
+//   background-image: url(/assets/images/zoom-in-icon.svg);
+// }
+
+// .defra-zoom-out {
+//   background-image: url(/assets/images/zoom-out-icon.svg);
+// }
+
+// .defra-refresh {
+//   &-block {
+//     bottom: 100px;
+//     right: 13px;
+//     display: none;
+//   }
+
+//   &-control {
+//     background-image: url(/assets/images/refresh-icon.svg);
+//   }
+// }
 
 .govuk-checkboxes__input {
   width: 26px;
