354258 - Minor change (WIP)

--- a/src/views/partials/results/map_results.njk
+++ b/src/views/partials/results/map_results.njk
@@ -88,6 +88,7 @@
         }) }}
       </div>
       <div class="govuk-section-break--visible"></div>
+      {% include 'partials/results/filters.njk' %}
     </div>
     <div class="defra-map-info" id="map-info" role="dialog" open="true" aria-modal="true" aria-labelledby="infoLabel" aria-describedby="infoDescription" tabindex="-1">
       <div class="defra-map-info__container">
