--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -42,7 +42,13 @@
       {%- include 'partials/results/map_results.njk' -%}
     </div>
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-third">{% include 'partials/results/filters.njk' %}</div>
+      <div class="govuk-grid-column-one-third">
+        <h2 class='govuk-heading-m filter-heading govuk-!-margin-bottom-2'>
+          Filters
+        </h2>
+        <div class="govuk-section-break--visible"></div>
+        {% include 'partials/results/filters.njk' %}
+      </div>
       <div class="govuk-grid-column-two-thirds">
         {% include 'partials/results/summary.njk' %}
       </div>
