--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -25,7 +25,7 @@
     },
     {
       text: 'Search results',
-      href: routes.searchResults
+      href: routes.searchResults + '?' + queryString
     }]
   %}
 
