--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7595,7 +7595,7 @@
 }
 
 .banner-container {
-  padding-top: 30px;
+  padding-top: 14px;
   padding-bottom: 30px;
 }
 .banner-container__heading-xl {
@@ -7613,11 +7613,17 @@
   line-height: 30px;
   color: #ffffff;
 }
+.banner-container__ncea-logo {
+  height: 88px;
+  gap: 0px;
+  opacity: 0px;
+  margin-left: -16px;
+}
 
-.video-container {
+.educational-copy-container {
   margin-bottom: 40px;
 }
-.video-container__heading-m {
+.educational-copy-container__heading-m {
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
@@ -7627,24 +7633,6 @@
   padding-bottom: 30px;
   margin: 0px;
   border-top: 1.5px solid #b1b4b6;
-}
-.video-container__frame {
-  position: relative;
-  padding-bottom: 33%;
-  padding-top: 35px;
-  height: 0;
-  overflow: hidden;
-}
-.video-container__frame iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-@media screen and (max-width: 799px) {
-  .video-container__frame iframe {
-    width: 100%;
-    height: 100%;
-  }
 }
 
 @media only screen and (min-width: 769px) {
