354236 - Fixing the failed test cases

--- a/src/views/partials/guided_search_breadcrumb/template.njk
+++ b/src/views/partials/guided_search_breadcrumb/template.njk
@@ -10,8 +10,7 @@
         }
       },
       {
-        text: "Questionnaire search",
-        href: "#"
+        text: "Questionnaire search"
       }
     ]
   }) }}
