--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -21,8 +21,7 @@
         }
       },
       {
-        text: "Search results",
-        href: "#"
+        text: "Search results"
       }
     ]
   }) }}
