--- a/src/views/partials/quick_search/template.njk
+++ b/src/views/partials/quick_search/template.njk
@@ -19,10 +19,7 @@
           name: 'search_term',
           label: {
             text: 'Search',
-            classes: 'search-block__label',
-            attributes: {
-              'aria-hidden': true
-            }
+            classes: 'search-block__label'
           },
           suffix: {
             html: '<button type="submit" class="search-block__button" data-do-quick-search="true">Search</button>'
