364954 - Map results accessibility view with keyboard event

--- a/src/views/partials/quick_search/template.njk
+++ b/src/views/partials/quick_search/template.njk
@@ -6,7 +6,7 @@
       {% if params.isResultPage %}
         Search
       {% else %}
-        Quick Search
+        Quick search
       {% endif %}
     </h1>
     {% if not params.isResultPage %}
