367801 - Fixing the button typo

--- a/src/views/screens/guided_search/date_questionnaire.njk
+++ b/src/views/screens/guided_search/date_questionnaire.njk
@@ -42,7 +42,7 @@
             {{ govukButton({ text: "Skip question", classes: "govuk-button--secondary govuk-!-margin-bottom-0", href: skipPath, attributes: {
               'data-do-storage-skip': ''
             } }) }}
-            {{ govukButton({ text: "Next results", classes: "govuk-!-margin-bottom-0", attributes: {
+            {{ govukButton({ text: "Next question", classes: "govuk-!-margin-bottom-0", attributes: {
               'data-to-disable': '', 'data-next-question': ''
             } }) }}
           </div>
