367801 - Hiding the previous button on the date search page. This will be enabled after NCEA search pages are ready

--- a/src/views/screens/guided_search/geography_questionnaire.njk
+++ b/src/views/screens/guided_search/geography_questionnaire.njk
@@ -65,11 +65,11 @@
       <div class="govuk-grid-column-one-half geography-buttons__left">
         {{ govukButton({ text: "Previous question", classes: "govuk-button--secondary govuk-!-margin-bottom-0", href: guidedDateSearchPath }) }}
       </div>
-      <div class="govuk-grid-column-one-half govuk-button-group govuk-!-margin-bottom-0 govuk-!-padding-right-0 geography-buttons__right">
+      <div class="govuk-grid-column-one-half govuk-button-group govuk-!-margin-bottom-0 geography-buttons__right">
         {{ govukButton({ text: "Skip question", classes: "govuk-button--secondary govuk-!-margin-bottom-0", href: skipPath, attributes: {
             'data-do-storage-skip': ''
           } }) }}
-        {{ govukButton({ text: "Show results", classes: "govuk-!-margin-bottom-0", attributes: {
+        {{ govukButton({ text: "Show results", classes: "govuk-!-margin-bottom-0 govuk-!-margin-right-0", attributes: {
             'data-to-disable': '',
             'data-next-question': ''
           } }) }}
