Classifier changes for Level 1 and Level 2

--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -36,7 +36,7 @@
     name: 'guided-search',
     text: "Start",
     isStartButton: true,
-    href: routes.guidedSearch,
+    href: routes.guidedSearch+'?level=1',
     attributes: {
       'data-do-quick-search': false
     }
