--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -2,6 +2,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "partials/results_count/macro.njk" import resultsCount %}
 
 {% block beforeContent %}
   {{ super() }}
@@ -9,30 +10,50 @@
 {% endblock %}
 
 {% block content %}
-  {% set checkboxItems = [] %}
-  {% for item in classifierItems %}
-    {% set _ = checkboxItems.push({value: item.value, html: govukDetails({summaryText: item.value, text: item.text}) }) %}
-  {% endfor %}
-  {% set _ = checkboxItems.push({divider: "or" }) %}
-  {% set _ = checkboxItems.push({value: "all", text: "Select all", behaviour: "exclusive"}) %}
   <div class="govuk-grid-row">
+    {% include "partials/results_count/template.njk" %}
     <form method="GET" id="{{formId}}" action="{{guidedClassifierSearchPath}}" data-do-browser-storage>
-      <div class="classifier-search">
-        {{ govukCheckboxes({
-            name: "level1",
-            fieldset: {
-              legend: {
-                text: "Select a natural capital theme",
-                isPageHeading: true,
-                classes: "govuk-fieldset__legend--l"
-              }
-            },
-            hint: {
-              text: "Select all that apply"
-            },
-            items: checkboxItems
-          }) }}
+      <input type="hidden" name="level" value="{{nextLevel}}" />
+      <div class="govuk-grid-column-two-thirds">
+        {% for classify in classifierItems %}
+          {% set checkboxItems = [] %}
+          {% for item in classify.classifiers %}
+            {% set _ = checkboxItems.push({value: item.id, html: govukDetails({summaryText: item.value, text: item.text}) }) %}
+          {% endfor %}
+          {% set _ = checkboxItems.push({divider: "or" }) %}
+          {% set _ = checkboxItems.push({value: classify.selectAll, text: "Select all", behaviour: "exclusive"}) %}
+          {% if classify.sectionTitle.length > 0 %}
+            {% set sectionTitle = classify.sectionTitle %}
+          {% else %}
+            {% set sectionTitle = 'Select a natural capital theme' %}
+          {% endif %}
+
+          {% if classify.sectionIntro.length > 0 %}
+            {% set sectionIntro = classify.sectionIntro %}
+          {% else %}
+            {% set sectionIntro = 'Select all that apply' %}
+          {% endif %}
+          {{ govukCheckboxes({
+              name: "parent",
+              fieldset: {
+                legend: {
+                  text: sectionTitle,
+                  isPageHeading: true,
+                  classes: "govuk-fieldset__legend--l"
+                }
+              },
+              hint: {
+                text: sectionIntro
+              },
+              items: checkboxItems
+            }) }}
+        {% endfor %}
         <div class="govuk-button-group">
+          {% if nextLevel > 2 %}
+            <div class="govuk-grid-column-one-half geography-buttons__left">
+              {{ govukButton({ text: "Previous question", classes: "govuk-button--secondary govuk-!-margin-bottom-0", href: 'javascript:history.back()' }) }}
+            </div>  
+          {% endif %}
           {{ govukButton({ text: "Skip question", classes: "govuk-button--secondary", href: skipPath, attributes: {
             'data-do-storage-skip': ''
           } }) }}
