--- a/src/views/partials/results/map_results.njk
+++ b/src/views/partials/results/map_results.njk
@@ -90,10 +90,10 @@
       <div class="govuk-section-break--visible"></div>
       <div id="map-filter-block" data-action="{{routes.getMapFilters}}" data-fetch-map-filters></div>
     </div>
-    <div class="defra-map-info" id="map-info" role="dialog" open="true" aria-modal="true" aria-labelledby="infoLabel" aria-describedby="infoDescription" tabindex="-1">
+    <div class="defra-map-info" id="map-info" role="dialog" open="true" aria-modal="true" tabindex="-1">
       <div class="defra-map-info__container">
         <div class=" defra-map-info__title-block">
-          <h2 class='govuk-heading-m govuk-!-margin-0' id="info-title"></h2>
+          <h2 class='govuk-heading-m govuk-!-margin-0' id="info-title">test</h2>
           <span class="defra-map-info__close" id="map-info-close">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
               <g clip-path="url(#clip0_6756_108066)">
