--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7695,6 +7695,27 @@
   float: right;
 }
 
+.defra-map-clear-selection__block {
+  display: none;
+  width: 150px;
+}
+.defra-map-clear-selection__link {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 25px;
+  display: flex;
+  align-items: center;
+  color: #1d70b8 !important;
+}
+.defra-map-clear-selection__link:hover {
+  color: #003078 !important;
+}
+.defra-map-clear-selection__link:focus {
+  color: #003078 !important;
+}
+
 .search-result__item {
   display: flex;
   flex-direction: column;
@@ -7952,6 +7973,7 @@
 .defra-map-zoom-in, .defra-map-zoom-out {
   display: flex;
   align-items: center;
+  position: relative;
   border: 0;
   height: 50px;
   width: 50px;
@@ -7962,9 +7984,6 @@
 }
 .defra-map-zoom-in:hover, .defra-map-zoom-out:hover {
   background-color: #f3f2f1;
-}
-.defra-map-zoom-in:focus-visible, .defra-map-zoom-out:focus-visible {
-  outline-offset: -2px;
 }
 .defra-map-info {
   position: absolute;
@@ -8010,15 +8029,13 @@
 }
 
 @media (min-width: 40.0625em) {
-  .defra-map-reset {
-    margin-bottom: 10px;
-  }
   .defra-map-zoom {
     display: block;
     float: right;
     clear: right;
     width: 50px;
     height: auto;
+    margin-top: 15px;
   }
 }
 @media (min-width: 52.1875em) {
