--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -95,7 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
     meta: {
       items: [
         {
-          href: "#",
+          href: routes.help,
           text: "Help"
         },
         {
