--- a/src/assets/sass/templates/_home.scss
+++ b/src/assets/sass/templates/_home.scss
@@ -42,6 +42,10 @@
   }
 }
 
+.help-link{
+  color: #1D70B8 !important;
+}
+
 .ncea-static-page {
   &__heading-m {
     @include font-style-stack(48px, 50px, 700);
