--- a/src/views/screens/home/help.njk
+++ b/src/views/screens/home/help.njk
@@ -14,7 +14,7 @@
         }
       },
       {
-        text: "Search results"
+        text: "Help"
       }
     ]
   }) }}
@@ -23,7 +23,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl">Help</h1>
+    <h1 class="govuk-heading-m ncea-static-page__heading-m">Help</h1>
     <p class="govuk-body-s">Contact the Natural Capital and Ecosystem Assessment (NCEA) programme for help with the Natural Capital Search Service. </p>
     <h1 class="govuk-heading-s">Email</h1>
     <a class="govuk-link help-link" href="mailto: NCEAemail@email.com">NCEAemail@email.com</a>
