--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
           text: "Help"
         },
         {
-          href: "#",
+          href: routes.privacyPolicy,
           text: "Privacy"
         },
         {
