--- a/src/views/screens/home/help.njk
+++ b/src/views/screens/home/help.njk
@@ -23,8 +23,8 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-m ncea-static-page__heading-m">Help</h1>
-    <p class="govuk-body-s">Contact the Natural Capital and Ecosystem Assessment (NCEA) programme for help with the Natural Capital Search Service. </p>
+    <h1 class="govuk-heading-xl ncea-static-page__heading-m">Help</h1>
+    <p class="govuk-body-m">Contact the Natural Capital and Ecosystem Assessment (NCEA) programme for help with the Natural Capital Search Service. </p>
     <h1 class="govuk-heading-s">Email</h1>
     <a class="govuk-link help-link" href="mailto: NCEAemail@email.com">NCEAemail@email.com</a>
     <p class="govuk-body-s"></p>
