--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -111,7 +111,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
           text: "Accessibility statement"
         },
         {
-          href: "#",
+          href: routes.termsAndConditions,
           text: "Terms and conditions"
         }
       ]
